--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logicamente.info/react-input-month",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "React component that enables the use of inputs with month type in browsers that does not support it nativelly",
   "main": "lib/InputMonth.js",
   "module": "es/InputMonth.js",
@@ -25,6 +25,7 @@
     "react": "16.x"
   },
   "devDependencies": {
+    "node-forge": "0.10.0",
     "nwb": "0.25.x",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
