--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logicamente.info/react-input-month",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "React component that enables the use of inputs with month type in browsers that does not support it nativelly",
   "main": "lib/InputMonth.js",
   "module": "es/InputMonth.js",
@@ -22,13 +22,14 @@
     "uuid": "^8.1.0"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": ">16.x"
   },
   "devDependencies": {
+    "inferno": "^7.4.8",
     "node-forge": "0.10.0",
     "nwb": "0.25.x",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "author": "Logicamente Info",
   "homepage": "https://logicamente.info",
